2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* FileReader/PajeFileReader.m: remove file compression support
	  when on MacOSX (GNUstep extension)

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* EntityTypeFilter/EntityTypeSelector.m: make ColoredSwitchButtonCell
	  appear on MacOSX; add missing enumerator method

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregateValue.[hm]: avoid inter-bundle
	dependency (derive from PajeEntity instead of UserValue)

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregateEvent.h, StatViewer/PieCell.m:
	  correct method name (subValueAtIndex:)

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEvent.m: fix 'for' limit (bug report from Lucas Schnorr)

2007-03-11  Benhur Stein <benhur@inf.ufsm.br>
	* Change makefiles to be compatible with gnustep-make v2

2007-02-27  (1.97) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
	* New release. First RC before 2.0 ;-)

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
	* put version info

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
	* change chunk sizes.
	* version 1.97 (first pre 2.0)

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
        * AggregatingFilter/AggregatingFilter.m: correct wrong enumerator use

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTime/DrawView+Drawing.m: better drawing of incomplete links
          and min/max values

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregatingChunk.m: remove debug messages

2007-02-16  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTime/DrawView.m: test for nil window when drawing;
          correct trackingRect setting.

2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
        * General/EntityChunk.h: added missing method declarations
        * PajeSimulator/PajeSimul.h: ditto
        * PajeSimulator/SimulChunk.h: ditto
        * SpaceTimeViewer/STController: abort initialisation if interface
          cannot be loaded
