@@ -1,3 +1,6 @@
+2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
+	* General/Macros.h: declare debug log macros missing in MacOSX
+
 2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
 	* FileReader/PajeFileReader.m: remove file compression support
 	  when on MacOSX (GNUstep extension)
